--- a/.github/workflows/flat.yaml
+++ b/.github/workflows/flat.yaml
@@ -6,7 +6,7 @@ on:
       - .github/workflows/flat.yml # Only run a new workflow every time this file (flat.yaml) file changes
   workflow_dispatch: # Required even though this is currently empty
   schedule:
-    - cron: '*/5 * * * *' # Run this workflow every 5 minutes
+    - cron: '0 0 1 * *' # Run this workflow every month on the first day of the month
 
 jobs:
   scheduled:
@@ -26,5 +26,5 @@ jobs:
         with:
           http_url: https://api.github.com/graphql
           downloaded_filename: github.json
-          authorization: ${{ secrets.API_PAT }}
-          axios_config: query.json
+          authorization: ${{ secrets.API_PAT }} # an API key/secret for the GitHub API being used in the grahpQL query
+          axios_config: query.json # a file with axios config details, including a graphQL query
