--- a/.github/workflows/flat.yaml
+++ b/.github/workflows/flat.yaml
@@ -25,6 +25,6 @@ jobs:
         uses: githubocto/flat@mr/ia/expose-axios-config
         with:
           http_url: https://api.github.com/graphql
-          downloaded_filename: github.json
+          downloaded_filename: queryResponse.json
           authorization: ${{ secrets.API_PAT }} # an API key/secret for the GitHub API being used in the grahpQL query
           axios_config: query.json # a file with axios config details, including a graphQL query
