--- a/.github/workflows/flat.yaml
+++ b/.github/workflows/flat.yaml
@@ -22,7 +22,7 @@ jobs:
           deno-version: v1.x
       # The third step is a Flat Action step. We fetch the data in the http_url and save it as downloaded_filename
       - name: Fetch data 
-        uses: githubocto/flat@mr/ia/expose-axios-config
+        uses: githubocto/flat@v3
         with:
           http_url: https://api.github.com/graphql
           downloaded_filename: queryResponse.json
